[metadata]
name = gaspium
version = file: VERSION
url = https://github.com/pyrustic/gaspium
author = Pyrustic Evangelist
author_email = pyrustic@protonmail.com
maintainer = Pyrustic Evangelist
maintainer_email = pyrustic@protonmail.com
description = Python framework to build apps with the GASP metaphor
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    framework
    GASP
    GUI
    productivity
    apps
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    tkf

[options.entry_points]
console_scripts =
    gaspium = gaspium.__main__:main
