[metadata]
name = gaspium
version = file: VERSION
url = https://github.com/pyrustic/gaspium
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = Framework to build Python apps with the GASP metaphor
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    framework
    GASP
    GUI
    productivity
    batteries-included
    apps
    pages
    pyrustic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    backstage
    cyberpunk-theme
    kurl
    megawidget
    shared
    subrun
    suggestion
    tkstyle
    threadom
    viewable


[options.entry_points]
console_scripts =
    gaspium = gaspium.__main__:main
